# runtime_generics

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  handle-task-event  index.html  install  mkdocs.yml  objects.inv  precommit  pyproject.toml  release  requirements-dev.txt  runtime_generics.py  setup-local.bash  sitemap.xml  test_runtime_generics.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  functionality.yml
.github/workflows/: audit.yml  coverage.yml  doclinks.yml  documentation-links.yml  lint.yml  mypy.yml  news.yml  release.yml  smokeshow.yml  test.yml
api/: index.html
changelog/: index.html
changes/: .gitignore
code_of_conduct/: index.html
contributing/: index.html
docs/: api.md  contributing.md  index.md
news/: +07f1f01c.fixed.md  +1.removed.md  +1a61ed22.added.md  +1bf77373.added.md  +53685890.fixed.md  +94c6aa38.changed.md  +f5e2b49f.added.md  .gitignore
runtime_generics/: __init__.py
scripts/: bump.sh  fe6ed23.sh  lock  magic  prep  release  release.py  skeleton.0.0.2rc-125-ga2febcf.bash  skeleton.0.0.2rc-149-gaad3c42.bash  skeleton.0.0.2rc-159-g952fe11.bash  skeleton.0.0.2rc-161-g1ae7659.bash  skeleton.0.0.2rc-165-ga9a4d91.bash  skeleton.0.0.2rc-166-gf236e83.bash  skeleton.0.0.2rc-168-gbfcbe8f.bash  skeleton.0.0.2rc-178-gf56f2a7.bash  skeleton.0.0.2rc-179-ge71b725.bash  skeleton.0.0.2rc-180-g2a2d737.bash  skeleton.0.0.2rc-203-g18f12ab.bash  skeleton.0.0.2rc-215-g792492f.bash  skeleton.0.0.2rc-244-g52a2805.bash  skeleton.17ba612.bash  skeleton.sh  sync.sh  wand
search/: search_index.json
tests/: test_runtime_generics.py
